Blog add component and functionality added

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/buttons.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/buttons.less
@@ -16,7 +16,7 @@
     .button-variant(white; #20b61f; #1ba31b);
 }
 
-.btn-primary {
+.btn-alta-primary {
     background-color: #F6912B;
     border-color: #F6912B;
 }
