Blog post  html changing

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -7,7 +7,7 @@
 @import "site/navbar.less";
 @import "site/navs.less";
 @import "site/dropdown.less";
-/*@import "site/buttons.less";*/
+@import "site/buttons.less";
 @import "site/progress.less";
 @import "site/panel.less";
 @import "site/forms.less";
