--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-create/blog-create.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-create/blog-create.component.html
@@ -1,6 +1,25 @@
 ﻿<style>
-    .move-left-35{
-        margin-left:-35px;
+    .move-left-35 {
+        margin-left: -35px;
+    }
+
+    .post-info {
+        margin-top: 10px;
+        color: #d6d1d1;
+    }
+
+    .blog-list-panel {
+        border: 1px dashed #e8d258;
+        border-radius: 6px;
+        padding: 10px;
+        text-align: center;
+        cursor: pointer;
+        margin-top: 15px;
+    }
+
+    .col-md-4 > div:hover {
+        border: 1px dashed #cfb730;
+        background-color: rgba(241, 230, 169, 0.50);
     }
 </style>
 <form (ngSubmit)="saveBlog()" #blogForm="ngForm">
@@ -29,7 +48,7 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label col-sm-3" >Description</label>
+            <label class="control-label col-sm-3">Description</label>
             <div class="col-sm-9">
                 <textarea class="form-control bottom-margin" rows="5" placeholder="Description" [(ngModel)]="blog.description" [ngModelOptions]="{standalone: true}"></textarea>
             </div>
@@ -43,7 +62,22 @@
 </form>
 <hr />
 <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4"></div>
-    <div class="col-md-4"></div>
+    <div class="col-md-4">
+        <div class="blog-list-panel">
+            <h2>Blog Name</h2>
+            <div class="post-info">Post a blog</div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="blog-list-panel">
+            <h2>Blog Name</h2>
+            <p class="post-info">Post a blog</p>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="blog-list-panel">
+            <h2>Blog Name</h2>
+            <p class="post-info">Post a blog</p>
+        </div>
+    </div>
 </div>
