--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -32,7 +32,7 @@
                     <li><a class="route" [routerLink]="['/dashboard/viewprofile',credential.userId,'bookmark']" routerLinkActive="active-link">Bookmarks <span>{{profileParam?.bookmarks}}</span></a></li>
                     <!--<li><a class="route" [routerLink]="['/dashboard/viewprofile',credential.userId,'post']" routerLinkActive="active-link">Posts<span>0</span></a></li>-->
                     <li><a class="route" [routerLink]="['/dashboard/viewprofile',credential.userId,'blog-create']" routerLinkActive="active-link">Blogs</a></li>
-                    <!--<li><a [routerLink]="['/dashboard/blog-post']">Blog Post</a></li>-->
+                    <li><a [routerLink]="['/dashboard/blog-post']">Blog Post</a></li>
                     <!--<li><a class="route" [routerLink]="['/dashboard/viewprofile',credential.userId,'direct-question']" routerLinkActive="active-link">Direct Question<span>{{profileParam?.directQuestions}}</span></a></li>-->
                 </ul>
             </div>
