Blog posts get user info, get blog posts, Get Blog Blog post Edit for style changed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-create/blog-create.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-create/blog-create.component.html
@@ -69,7 +69,7 @@
             <div class="col-md-4" *ngFor="let blog of blogList">
                 <div class="blog-list-panel">
                     <h2>{{blog?.title}}</h2>
-                    <button class="btn btn-primary">Create Post</button>
+                    <a class="btn btn-primary" [routerLink]="['/dashboard/blog-post',blog.id]">Create Post</a>
                 </div>
             </div>
            
