--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/buttons.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/buttons.less
@@ -1,15 +1,12 @@
 ﻿@import (reference) "../../bower_components/bootstrap/less/variables.less";
 @import (reference) "../../bower_components/bootstrap/less/mixins/buttons.less";
-/*.btn {
+.btn {
     font-family: "Open Sans Condensed",sans-serif;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 32px;
-    height: 32px;
+    font-size: 15px;
     text-shadow: 0 -1px 0 rgba(0,0,0,0.2);
     padding:2px 3px;
-    padding-bottom: 0;
-}*/
+    color:white;
+}
 
 .btn-success {
     box-shadow: inset 0 1px rgba(255,255,255,0.19);
