--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-create/blog-create.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-create/blog-create.component.html
@@ -66,7 +66,7 @@
 <div *ngIf="blogList">
     <div class="row">
 
-            <div class="col-md-4" *ngFor="let blog of blogList">
+            <div class="col-md-4" *ngFor="let blog of blogs">
                 <div class="blog-list-panel">
                     <h2>{{blog?.title}}</h2>
                     <a class="btn btn-primary" [routerLink]="['/dashboard/blog-post',blog.id]">Create Post</a>
