akash:updaed blog post and show all the blog post on chnages

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-create/blog-create.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-create/blog-create.component.html
@@ -63,7 +63,7 @@
     </div>
 </form>
 <hr />
-<div *ngIf="blogList">
+<div *ngIf="blog">
     <div class="row">
 
             <div class="col-md-4" *ngFor="let blog of blogs">
