--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/blog-post.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/blog-post.component.html
@@ -35,15 +35,37 @@
     .txt-small-grey {
         color: #a4a1a1;
     }
-    .margin-top-5{
-        margin-top:5px;
+
+    .margin-top-5 {
+        margin-top: 5px;
     }
 </style>
 
 <div class="blog-edit-panel" style="border:1px solid">
-    <h1>{{blog?.title}}</h1>
-    <h4>{{blog?.description}}</h4>
-    <div class="btn-blog-edit">Edit</div>
+    <h1 *ngIf="!isEditTitle">{{blog?.title}}</h1>
+    <div class="btn-blog-edit">
+        <div *ngIf="!isEditDescription">
+            <a (click)="isEditTitle=true">edit</a>
+        </div>
+        <div *ngIf="isEditTitle">
+            <input placeholder="update description" [(ngModel)]="blog.title" type="text" />
+            <button class="btn btn-primary" (click)="updateTitle()">Update</button>
+        </div>
+
+    </div>
+
+    <h4 *ngIf="!isEditDescription">{{blog?.description}}</h4>
+
+    <div class="btn-blog-edit">
+        <div *ngIf="!isEditDescription">
+            <a (click)="isEditDescription=true">edit</a>
+        </div>
+        <div *ngIf="isEditDescription">
+            <input placeholder="update description" [(ngModel)]="blog.description" type="text" />
+            <button class="btn btn-primary" (click)="updateDescription()">Update</button>
+        </div>
+        
+    </div>
     <div><img class="profile-image" src="../../../../profile/{{blog?.userViewModel?.imageUrl}}" /></div>
     <h1>{{blog?.userViewModel?.name}}</h1>
     <div class="txt-small-grey">Write post</div>
@@ -54,10 +76,9 @@
                        #title="ngModel" placeholder="Add Title Post" />
             </h1>
             <div>
-                <quill-editor  [ngModelOptions]="{standalone: true}"
-                               [modules]="{toolbar: [['bold', 'italic', 'underline'], ['link', 'image']]}"
-                               id="description" [(ngModel)]="blogPost.description"  name="description"
-                ></quill-editor>
+                <quill-editor [ngModelOptions]="{standalone: true}"
+                              [modules]="{toolbar: [['bold', 'italic', 'underline'], ['link', 'image']]}"
+                              id="description" [(ngModel)]="blogPost.description" name="description"></quill-editor>
                 <button class="btn btn-alta-primary pull-right margin-top-5 btn-sm" [disabled]="!blogPostForm.form.valid">Post Blog</button>
             </div>
         </div>
@@ -66,8 +87,8 @@
     <hr />
 </div>
 <div *ngIf="blogposts">
-    
-    
+
+
     <div class="blog-list" style="border: 1px solid" *ngFor="let blogpost of blogposts">
         <div class="blog-header">
             <h2>{{blogpost?.title}}</h2>
