Blog status panel and comment panel added with style and basic loading

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/post-comment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/post-comment.component.html
@@ -1,5 +1,5 @@
 ﻿<div class="row">
-    <div class="collapse comment-panel" id="questionComment{{commentId}}">
+    <div class="collapse comment-panel" id="postComment{{commentId}}">
         <form #commentForm="ngForm" class="form-horizontal " role="form">
             <div class="comment-input">
                 <img class="user-image" src="../../../../profile/{{_logObj.user.imageUrl?_logObj.user.imageUrl:'avatar.png'}}" />
