--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/blog-post.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/blog-post.component.html
@@ -15,7 +15,7 @@
     }
 
     .blog-list {
-        width: 75%;
+        width: 60%;
         margin: 5px auto;
     }
 
@@ -41,7 +41,7 @@
     }
 </style>
 
-<div class="blog-edit-panel" style="border:1px solid">
+<div class="blog-edit-panel">
     <h1 *ngIf="!isEditTitle">{{blog?.title}}</h1>
     <div class="btn-blog-edit">
         <div *ngIf="!isEditTitle">
@@ -84,10 +84,14 @@
         </div>
     </form>
 
-    <hr />
 </div>
+<br />
+<br />
 <div *ngIf="blogposts">
-    <div class="blog-list" style="border: 1px solid" *ngFor="let post of blogposts">
+
+    <div class="blog-list" *ngFor="let post of blogposts">
+        <hr />
+        <br />
         <div class="blog-header">
             <h2>{{post?.title}}</h2>
             <h4>{{post?.createdOn}}</h4>
@@ -103,6 +107,7 @@
                         <p>Test skfdso  spdfjksp df[oksdf [skdof [sld;fkk[k'sdfkjsdhfiujhbjanfd adf afjpa fai fpisa]]]]</p><span><a>Read more..</a></span>
                     </div>-->
                 <post-status></post-status>
+                <blogpost-comment [blogPostId]="blogPost.id"></blogpost-comment>
             </div>
         </div>
     </div>
