--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/post-status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/post-status.component.html
@@ -1,5 +1,4 @@
-﻿
-<div class="status-panel">
+﻿<div class="status-panel">
     <div>
         <img *ngIf="blogpost?.blogLike?.length<1" src='../images/fade-logo.png' onmouseover="this.src = '../images/like-logo.png';" onmouseout="this.src = '../images/fade-logo.png';" />
         <img *ngIf="blogpost?.blogLike?.length>0" src='../images/like-logo.png' />
@@ -25,74 +24,6 @@
                onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
                 <img class="social-image" id="img2" src="../images/twitter.png" />
             </a>
-            <div class="other-function" id="img3">
-                <a [popover]="externalPop">
-                    <img class="external-img" src="../images/icon-external-link.png" />
-                </a>
-                <popover-content #externalPop
-                                 placement="top"
-                                 [closeOnClickOutside]="true">
-                    <ul style="list-style-type: none;">
-                        <li style="list-style-type: none;width: 100px;">
-                            <i class="fa fa-linkedin-square"></i>
-                            <a href="http://www.linkedin.com/shareArticle?mini=true&url={{blogpost?.sharedUrl}}"
-                               onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">Linkedin</a>
-                        </li>
-                    </ul>
-                </popover-content>
-            </div>
-
         </div>
     </div>
 </div>
-<!--<div class="status-panel">
-    <img *ngIf="questionObj?.answers[0]?.likes?.length<1" (click)="submitLike(answerObj?.id,questionObj.id)" src='../images/fade-logo.png' onmouseover="this.src = '../images/like-logo.png';" onmouseout="this.src = '../images/fade-logo.png';" />
-    <img *ngIf="questionObj?.answers[0]?.likes?.length>0" src='../images/like-logo.png' />
-    <a href="#" data-toggle="modal" attr.data-target="#likeModal{{commentId}}" class="number-box" (click)="showLikeUserDetails()"> {{isQuestion?(questionObj.likes.length):(answerObj?.likes?.length)}}</a>
-    <a (click)="submitLike(answerObj?.id,questionObj.id)"><div class="status-line">{{questionObj.likes.length>1?'Likes':'Like'}}</div></a>
-    <div class="status-line like-border "></div>
-    <div class="status-line number-box">{{questionObj?.viewCount?questionObj?.viewCount:0}}</div>
-    <div class="status-line">Leidos</div>
-    {{likedUsers?.length}}
-    <div class="number-box">
-        {{CommentCount}}
-    </div>
-    <a class="status-line" data-toggle="collapse" aria-expanded="false" attr.data-target="#questionComment{{commentId}}">Comentarios</a>
-    <div class="status-line number-box">{{questionObj?.answerCount}}</div>
-    <div class="status-line">Respuestas</div>
-
-    <div class="social-icon">
-        <a href="https://www.facebook.com/sharer/sharer.php?u={{questionObj.shareUrl}}"
-           class="SHARE FACEBOOK"
-           onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
-            <img class="social-image" id="img1" src="../images/facebooklogo.jpg" />
-        </a>
-
-        <a href="https://twitter.com/home?status={{questionObj.shareUrl}}"
-           class="SHARE TWITTER"
-           onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
-            <img class="social-image" id="img2" src="../images/twitter.png" />
-        </a>
-        <div class="other-function" id="img3">
-            <a [popover]="externalPop">
-                <img class="external-img" src="../images/icon-external-link.png" />
-            </a>
-            <popover-content #externalPop
-                             placement="top"
-                             [closeOnClickOutside]="true">
-                <ul style="list-style-type: none;">
-                    <li style="list-style-type: none;width: 100px;">
-                        <i class="fa fa-linkedin-square"></i>
-                        <a href="http://www.linkedin.com/shareArticle?mini=true&url={{questionObj.shareUrl}}"
-                           onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">Linkedin</a>
-                    </li>
-                    <li style="list-style-type: none;">
-                        <i class="fa fa-share-square"></i>
-                        <a (click)="postClikced(questionObj?.id)">Post</a>
-                    </li>
-                </ul>
-            </popover-content>
-        </div>
-
-    </div>
-</div>-->
