akahs:Alter script aded

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site.less
@@ -30,14 +30,15 @@
 @import "site/components/dashboard_viewprofile";
 @import "site/components/dashboard_viewprofile_profile-info";
 @import "site/components/shared_userinfo";
-.right-border{
-    border-right:1px solid;
-    color:white;
+
+.right-border {
+    border-right: 1px solid;
+    color: white;
 }
 
 /* Toggle Styles for SIDE bar */
- 
- #wrapper {
+
+#wrapper {
     padding-left: 0;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
@@ -45,49 +46,53 @@
     transition: all 0.5s ease;
     overflow: hidden;
 }
- 
+
 #wrapper.toggled {
     padding-left: 250px;
     overflow: scroll;
 }
- 
+
 #sidebar-wrapper {
     z-index: 1000;
-    position: absolute; 
+    position: absolute;
     left: 250px;
     width: 0;
     height: 100%;
     margin-left: -250px;
     overflow-y: hidden;
     background: #ededed;
-;
+    ;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
 }
+
 #wrapper.toggled #sidebar-wrapper {
     width: 250px;
 }
- 
+
 #page-content-wrapper {
     position: absolute;
     padding: 15px;
-    width: 100%;  
-    overflow-x: hidden; 
+    width: 100%;
+    overflow-x: hidden;
 }
-.xyz{
+
+.xyz {
     min-width: 360px;
 }
+
 #wrapper.toggled #page-content-wrapper {
     position: relative;
-    margin-right: 0px; 
+    margin-right: 0px;
 }
-.fixed-brand{
+
+.fixed-brand {
     width: auto;
 }
 /* Sidebar Styles */
- 
+
 .sidebar-nav {
     position: absolute;
     top: 0;
@@ -97,79 +102,84 @@
     list-style: none;
     margin-top: 68px;
 }
- 
+
 .sidebar-nav li {
     text-indent: 15px;
     line-height: 40px;
 }
- 
+
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
     color: #999999;
+}
 
+.sidebar-nav li ul li a {
+    margin-left: 22px;
 }
-.sidebar-nav li ul li a{
-    margin-left:22px
-}
- 
+
 .sidebar-nav li a:hover {
     text-decoration: none;
     color: #f6912b;
     background: rgba(255,255,255,0.2);
     border-left: red 2px solid;
 }
- 
+
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
     text-decoration: none;
 }
- 
+
 .sidebar-nav > .sidebar-brand {
     height: 65px;
     font-size: 18px;
     line-height: 60px;
 }
- 
+
 .sidebar-nav > .sidebar-brand a {
     color: #999999;
 }
- 
+
 .sidebar-nav > .sidebar-brand a:hover {
     color: #fff;
     background: none;
 }
-.no-margin{
-    margin:0;
+
+.no-margin {
+    margin: 0;
 }
- 
+
 @media(min-width:768px) {
     #wrapper {
         padding-left: 250px;
     }
-    .fixed-brand{
+
+    .fixed-brand {
         width: 250px;
     }
+
     #wrapper.toggled {
         padding-left: 0;
     }
- 
+
     #sidebar-wrapper {
         width: 250px;
         overflow: hidden;
     }
- 
+
     #wrapper.toggled #sidebar-wrapper {
         width: 250px;
     }
+
     #wrapper.toggled-2 #sidebar-wrapper {
         width: 50px;
     }
+
     #wrapper.toggled-2 #sidebar-wrapper:hover {
         width: 250px;
     }
- 
- 
+
+
     #page-content-wrapper {
         padding: 20px;
         position: relative;
@@ -178,12 +188,13 @@
         -o-transition: all 0.5s ease;
         transition: all 0.5s ease;
     }
- 
+
     #wrapper.toggled #page-content-wrapper {
         position: relative;
         margin-right: 0;
         padding-left: 250px;
     }
+
     #wrapper.toggled-2 #page-content-wrapper {
         position: relative;
         margin-right: 0;
@@ -193,6 +204,15 @@
         -o-transition: all 0.5s ease;
         transition: all 0.5s ease;
         width: auto;
- 
     }
+}
+
+.btn-success {
+    height: 33px;
+    width: 68px;
+}
+
+.checkbox {
+    height: 18px;
+    width: 18px!important;
 }
