--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-education.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-education.component.html
@@ -37,6 +37,8 @@
     .modal-header h3 {
         font-weight: bold;
     }
+
+   
 </style>
 
 <div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
@@ -49,7 +51,7 @@
             <div class="profile-modal-body">
                 <form class="form-horizontal" (ngSubmit)="saveEducation()" #educationForm="ngForm">
                     <div class="form-group">
-                        <label class="control-label col-sm-4" for="email">School Name</label>
+                        <label class="control-label col-sm-4" for="email">School Name*</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="SchoolName" placeholder="Enter SchoolName" [(ngModel)]="education.schoolName" required name="SchoolName"
                                    #SchoolName="ngModel">
@@ -64,7 +66,7 @@
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="SchoolDegreeName" placeholder="Enter Concentration" [(ngModel)]="education.concentration" [ngModelOptions]="{standalone: true}">
                         </div>
-                    </div>                   
+                    </div>
                     <div class="form-group">
                         <label class="control-label col-sm-4" for="pwd">Secondary Concentration</label>
                         <div class="col-sm-8">
