--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-employment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-employment.component.html
@@ -55,7 +55,7 @@
             <div class="profile-modal-body">
                 <form class="form-horizontal" (ngSubmit)="onEmploymentSubmit()" #employmentForm="ngForm">
                     <div class="form-group">
-                        <label class="control-label col-sm-4" for="email">Position :</label>
+                        <label class="control-label col-sm-4" for="email">Position* :</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="position" placeholder="Enter Position" [(ngModel)]="employment.position" required name="position"
                                    #position="ngModel">
@@ -86,7 +86,7 @@
                     <div class="form-group">
                         <label class="control-label col-sm-4">Currently Working</label>
                         <div class="col-sm-8">
-                            <input type="checkbox" class="form-control" [(ngModel)]="employment.isCurrentlyWorking"  [ngModelOptions]="{standalone: true}" />
+                            <input type="checkbox" class="form-control  checkbox" [(ngModel)]="employment.isCurrentlyWorking"  [ngModelOptions]="{standalone: true}" />
                         </div>
 
                     </div>
