--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-otherexperience.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-otherexperience.component.html
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-4" for="email">Description (required):</label>
+                        <label class="control-label col-sm-4" for="email">Description*:</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="Description" placeholder="Enter Description" [(ngModel)]="otherExperience.Description" required name="Description"
                                    #Description="ngModel">
