--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-place.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/add-place.component.html
@@ -76,7 +76,7 @@
                     <div class="form-group">
                         <label class="control-label col-sm-4">Currenty Living:</label>
                         <div class="col-sm-8">
-                            <input type="checkbox" class="form-control" [(ngModel)]="place.isCurrentyLiving" [ngModelOptions]="{standalone: true}" />
+                            <input type="checkbox" class="form-control checkbox" [(ngModel)]="place.isCurrentyLiving" [ngModelOptions]="{standalone: true}" />
                         </div>
 
                     </div>
