--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/post-comment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/post-comment.component.html
@@ -4,7 +4,7 @@
             <div class="comment-input">
                 <img class="user-image" src="../../../../profile/{{_logObj.user.imageUrl?_logObj.user.imageUrl:'avatar.png'}}" />
                 <input class="form-control" id="comment" [(ngModel)]="commentText" [ngModelOptions]="{standalone: true}" />
-                <button type="button" class="btn btn-primary" (click)="submitComment(questionId,answerId)">Comment</button>
+                <button type="button" class="btn btn-primary" (click)="submitComment(blogPost.id)">Comment</button>
             </div>
         </form>
         <div class="card card-block">
