--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/blog-post.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/blog-post.component.html
@@ -40,7 +40,7 @@
         margin-top: 5px;
     }
 </style>
-
+<div #blogPostDetail></div>
 <div class="blog-edit-panel">
     <h1 *ngIf="!isEditTitle">{{blog?.title}}</h1>
     <div class="btn-blog-edit">
@@ -89,14 +89,14 @@
 <br />
 <div *ngIf="blogposts">
 
-    <div class="blog-list" *ngFor="let post of blogposts">
+    <div class="blog-list" *ngFor="let post of blogposts" (click)="openPostDetailDialog(post)">
         <hr />
         <br />
         <div class="blog-header">
             <h2>{{post?.title}}</h2>
             <h4>{{post?.createdOn}}</h4>
         </div>
-        <div>
+        <div >
             {{post?.description}}
 
             <div class="article-details">
@@ -107,6 +107,7 @@
             <post-status  [blogPost]="post"></post-status>
 
             <blogpost-comment [blogPost]="post"></blogpost-comment>
+
 
             </div>
         </div>
