--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/post-status.component.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/post-status.component.css
@@ -77,17 +77,17 @@ h5 {
 }
 
 #img1 {
-    left: 0;
+    right:45px ;
 }
 
 #img2 {
-    left: 26px;
+    right: 20px;
 }
 
-#img3 {
+/*#img3 {
     left: 50px;
 }
 
 #img4 {
     left: 75px;
-}
+}*/
