--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -29,7 +29,7 @@
 
     </div>
     <div class="col-md-9">
-        <div class="row" *ngIf="credential"><profile-info [credential]="credential"></profile-info>
+        <div class="row" *ngIf="credential"><profile-info [credential]="credential" (onUpdated)="onUpdatedProfile($event)"></profile-info>
         </div>
         <div class="row">
             <div class="col-md-3">
