--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/blog-post.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/blog-post.component.html
@@ -89,21 +89,22 @@
 <br />
 <br />
 <div *ngIf="blogposts">
-
     <div class="blog-list" *ngFor="let post of blogposts" >
         <hr />
         <br />
         <div class="blog-header" (click)="openPostDetailDialog(post)">
             <h2>{{post?.title}}</h2>
-            <h4>{{post?.createdOn}}</h4>
+            <h4>{{post?.createdOn| date: 'dd MMM,yyyy'}}</h4>
         </div>
         <div>
             <div class="article-details" >
                 <div *ngIf="post?.description" (click)="openPostDetailDialog(post)">
                     <p [innerHTML]="post?.description.substring(0, 200)"></p><span><a>Read more..</a></span>
                 </div>
-                <post-status [blogPost]="post"></post-status>
-                <blogpost-comment [blogPost]="post"></blogpost-comment>
+                <div *ngIf="post.id">
+                    <post-status [blogPost]="post"></post-status>
+                    <blogpost-comment [blogPost]="post"></blogpost-comment>
+                </div>
             </div>
         </div>
     </div>
