--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/post-comment.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/blog-post/post-comment.component.html
@@ -3,15 +3,15 @@
         <form #commentForm="ngForm" class="form-horizontal " role="form">
             <div class="comment-input">
                 <img class="user-image" src="../../../../profile/{{_logObj.user.imageUrl?_logObj.user.imageUrl:'avatar.png'}}" />
-                <input class="form-control" id="comment" [(ngModel)]="commentText" [ngModelOptions]="{standalone: true}" />
+                <input class="form-control" id="comment" [(ngModel)]="comment.commentText" [ngModelOptions]="{standalone: true}" />
                 <button type="button" class="btn btn-primary" (click)="submitComment(blogPost.id)">Comment</button>
             </div>
         </form>
         <div class="card card-block">
             <div *ngFor="let comment of comments" class="clearfix">
                 <div *ngIf="comment">
-                    <img class="user-image comment-img" src="../../../../profile/{{comment?.userViewModel?.imageUrl}}" />
-                    <div class="header-info">{{comment?.userViewModel?.name}}</div>
+                    <img class="user-image comment-img" src="../../../../profile/{{comment?.user?.imageUrl}}" />
+                    <div class="header-info">{{comment?.user?.name}}</div>
                     <p class="answer-text">{{comment.commentText}}</p>
                 </div>
                 <hr />
