--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/posted-question/posted-question.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/posted-question/posted-question.component.html
@@ -1,19 +1,3 @@
-﻿<style>
-    .blog-edit-panel {
-        width: 75%;
-        margin: 5px auto;
-    }
-</style>
-
-<h1>Blog Name</h1>
-<div>Description</div>
-<div>Image</div>
-<h1>Rafel Younda</h1>
-<h3>Write Post</h3>
-<h1>Add Title Post</h1>
-<div>
-    
+﻿<div class="tab" *ngFor="let question of questions">
+    <question-panel [question]="question"></question-panel>
 </div>
-<hr />
-<h2>Blog Title</h2>
-<h4>Date</h4>
